--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Recyclerview_example</string>
+    <string name="welche_kategorie_wird_gesucht">welche Kategorie wird gesucht?</string>
 </resources>
